# yahoo-finance-ai-tool

./: .gitignore  README.md  SPEC.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml
skills/yahoo-finance-ai-tool/: SKILL.md
src/yahoo_finance_ai/: __init__.py  __main__.py  auth.py  bulk.py  cli.py  client.py  exceptions.py  export.py  indicators.py  mcp_server.py  models.py  parsers.py  service.py
tests/: conftest.py
tests/fixtures/: chart_aapl_1d_5m.json  chart_aapl_1mo_1d.json  chart_aapl_5y_div.json  chart_reliance_ns_3mo_1d.json  options_aapl.json  quote_v7_multi.json  quotesummary_aapl.json  quotesummary_reliance.json  search_apple_news.json  search_reliance.json  timeseries_aapl.json
tests/integration/: test_live.py
tests/load/: test_load.py
tests/unit/: test_indicators.py  test_models.py  test_parsers.py  test_service_and_bulk.py
