[project]
name = "yahoo-finance-ai-tool"
version = "0.1.0"
description = "Async Yahoo Finance client with MCP server and CLI for global stock data (quotes, OHLCV, fundamentals, options, news)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "curl-cffi>=0.7",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.0",
    "mcp[cli]>=1.2",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[project.scripts]
yfin = "yahoo_finance_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live network tests (deselect with '-m \"not integration\"')",
    "load: heavy load tests (500+ symbols)",
]

[tool.uv]
package = true
